fixing csrf header and transaction deletion

--- a/templates/base.html
+++ b/templates/base.html
@@ -51,6 +51,7 @@
         {% block body %}{% endblock body %}
 
         {% block bodyend %}{% endblock bodyend %}
+        {% csrf_token %}
     </body>
 </html>
 
