--- a/templates/webapp/transaction-list.html
+++ b/templates/webapp/transaction-list.html
@@ -40,6 +40,7 @@
                         <td class="span1 action-bar" ex-actionbar ng-controller="TransactionActionBarCtrl">
                             <i
                                 class="icon-trash delete-entry"
+                                ng-click="removeTransaction()"
                             ></i>
                         </td>
                     </tr>
